tests/golden/parse_errors/nullable_double_question.err
Parse error at 1:15: expected `=` after variable declaration, found Question `?`
  let x: number?? = nil;
                ^
